--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -11,7 +11,7 @@ Vagrant.configure(2) do |config|
   config.vm.provision :shell, inline: 'apt-get update'
 
   config.vm.provision :ansible do |ansible|
-    ansible.verbose  = true
+    #ansible.verbose = true
     ansible.playbook = 'ansible/site.yml'
   end
 end
