Nginx configuration example.

--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -8,6 +8,8 @@ Vagrant.configure(2) do |config|
     vb.cpus   = 4
   end
 
+  config.vm.network :forwarded_port, guest: 80, host: 8000
+
   config.vm.provision :shell, inline: 'apt-get update'
 
   config.vm.provision :ansible do |ansible|
