--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -1,19 +1,47 @@
 Vagrant.require_version '>= 1.8'
 
+class MachineDefinition
+  attr_accessor :name, :ip, :ssh_port
+
+  def initialize(name, ip, ssh_port)
+    @name     = name
+    @ip       = ip
+    @ssh_port = ssh_port
+  end
+end
+
+machine_defs = [
+  MachineDefinition.new('nginx', '10.0.2.11', 2211),
+  MachineDefinition.new('postgres-master', '10.0.2.31', 2231),
+  MachineDefinition.new('postgres-slave1', '10.0.2.32', 2232),
+]
+
 Vagrant.configure(2) do |config|
   config.vm.box = 'ubuntu/trusty64'
 
   config.vm.provider :virtualbox do |vb|
-    vb.memory = 4096
-    vb.cpus   = 4
+    vb.memory = 512
+    vb.cpus   = 2
   end
-
-  config.vm.network :forwarded_port, guest: 80, host: 8000
 
   config.vm.provision :shell, inline: 'apt-get update'
 
-  config.vm.provision :ansible do |ansible|
-    #ansible.verbose = true
-    ansible.playbook = 'ansible/site.yml'
+  machine_defs.each_with_index do |machine_def, idx|
+    config.vm.define machine_def.name do |machine|
+      machine.vm.hostname = machine_def.name
+      machine.vm.network :private_network, ip: machine_def.ip
+      machine.vm.network :forwarded_port, guest: 22, host: machine_def.ssh_port, id: 'ssh'
+
+      machine.vm.provision :ansible do |ansible|
+        ansible.playbook = 'ansible/site.yml'
+        ansible.limit    = 'all'
+        ansible.groups   = {
+          'nginx'               => %w(nginx),
+          'postgres'            => %w(postgres-master postgres-slave1),
+          'all_groups:children' => %w(nginx postgres),
+        }
+      end if idx == machine_defs.size - 1
+    end
   end
+
 end
