--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -14,6 +14,8 @@ machine_defs = [
   MachineDefinition.new('nginx', '10.0.2.11', 2211),
   MachineDefinition.new('postgres-master', '10.0.2.31', 2231),
   MachineDefinition.new('postgres-slave1', '10.0.2.32', 2232),
+  MachineDefinition.new('redis-master', '10.0.2.41', 2241),
+  MachineDefinition.new('redis-slave1', '10.0.2.42', 2242),
 ]
 
 Vagrant.configure(2) do |config|
@@ -33,15 +35,16 @@ Vagrant.configure(2) do |config|
       machine.vm.network :forwarded_port, guest: 22, host: machine_def.ssh_port, id: 'ssh'
 
       machine.vm.provision :ansible do |ansible|
+        #ansible.verbose  = true
         ansible.playbook = 'ansible/site.yml'
         ansible.limit    = 'all'
         ansible.groups   = {
           'nginx'               => %w(nginx),
           'postgres'            => %w(postgres-master postgres-slave1),
-          'all_groups:children' => %w(nginx postgres),
+          'redis'               => %w(redis-master redis-slave1),
+          'all_groups:children' => %w(nginx postgres redis),
         }
       end if idx == machine_defs.size - 1
     end
   end
-
 end
