--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -12,6 +12,8 @@ end
 
 machine_defs = [
   MachineDefinition.new('nginx', '10.0.2.11', 2211),
+  MachineDefinition.new('php1', '10.0.2.21', 2221),
+  MachineDefinition.new('php2', '10.0.2.22', 2222),
   MachineDefinition.new('postgres-master', '10.0.2.31', 2231),
   MachineDefinition.new('postgres-slave1', '10.0.2.32', 2232),
   MachineDefinition.new('redis-master', '10.0.2.41', 2241),
@@ -40,9 +42,10 @@ Vagrant.configure(2) do |config|
         ansible.limit    = 'all'
         ansible.groups   = {
           'nginx'               => %w(nginx),
+          'php'                 => %w(php1 php2),
           'postgres'            => %w(postgres-master postgres-slave1),
           'redis'               => %w(redis-master redis-slave1),
-          'all_groups:children' => %w(nginx postgres redis),
+          'all_groups:children' => %w(nginx postgres redis php),
         }
       end if idx == machine_defs.size - 1
     end
