--- a/Vagrantfile.dist
+++ b/Vagrantfile.dist
@@ -1,32 +1,29 @@
 Vagrant.require_version '>= 1.8'
 
 class MachineDefinition
-  attr_accessor :name, :ip, :ssh_port
+  attr_accessor :name, :ip, :ssh_port, :memory, :cpus
 
-  def initialize(name, ip, ssh_port)
+  def initialize(name, ip, ssh_port, memory, cpus)
     @name     = name
     @ip       = ip
     @ssh_port = ssh_port
+    @memory   = memory
+    @cpus     = cpus
   end
 end
 
 machine_defs = [
-  MachineDefinition.new('nginx', '10.0.6.11', 2211),
-  MachineDefinition.new('php1', '10.0.6.21', 2221),
-  MachineDefinition.new('php2', '10.0.6.22', 2222),
-  MachineDefinition.new('postgres-master', '10.0.6.31', 2231),
-  MachineDefinition.new('postgres-slave1', '10.0.6.32', 2232),
-  MachineDefinition.new('redis-master', '10.0.6.41', 2241),
-  MachineDefinition.new('redis-slave1', '10.0.6.42', 2242),
+  MachineDefinition.new('nginx', '10.0.6.11', 2211, 256, 1),
+  MachineDefinition.new('php1', '10.0.6.21', 2221, 512, 1),
+  MachineDefinition.new('php2', '10.0.6.22', 2222, 512, 1),
+  MachineDefinition.new('postgres-master', '10.0.6.31', 2231, 512, 2),
+  MachineDefinition.new('postgres-slave1', '10.0.6.32', 2232, 512, 2),
+  MachineDefinition.new('redis-master', '10.0.6.41', 2241, 256, 1),
+  MachineDefinition.new('redis-slave1', '10.0.6.42', 2242, 256, 1),
 ]
 
 Vagrant.configure(2) do |config|
   config.vm.box = 'ubuntu/trusty64'
-
-  config.vm.provider :virtualbox do |vb|
-    vb.memory = 512
-    vb.cpus   = 2
-  end
 
   config.vm.provision :shell, inline: 'apt-get update'
 
@@ -35,6 +32,11 @@ Vagrant.configure(2) do |config|
       machine.vm.hostname = machine_def.name
       machine.vm.network :private_network, ip: machine_def.ip
       machine.vm.network :forwarded_port, guest: 22, host: machine_def.ssh_port, id: 'ssh'
+
+      machine.vm.provider :virtualbox do |vb|
+        vb.memory = machine_def.memory
+        vb.cpus   = machine_def.cpus
+      end
 
       machine.vm.provision :ansible do |ansible|
         #ansible.verbose  = true
