--- a/.editorconfig
+++ b/.editorconfig
@@ -9,4 +9,10 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 indent_style = space
+indent_size = 4
+
+[*.yml]
+indent_size = 2
+
+[Vagrantfile,Vagrantfile.dist]
 indent_size = 2
